# krit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  appcast.xml  install.sh
.github/workflows/: build-check.yml
Casks/: krit.rb
app/: .env.example  .gitignore  Info.plist  Krit.entitlements  Package.swift  THIRD_PARTY_NOTICES.md  build-app.sh  make-dmg-bg.swift  make-dmg.sh  notarize-dmg.sh
app/.github/workflows/: release.yml
app/Branding/: KRIT.icns  make-icon.swift
app/Casks/: krit.rb
app/Sources/Krit/Annotation/: AnnotationCanvas.swift  AnnotationObject.swift  AnnotationWindowController.swift  SecretClassifier.swift  SmartRedactBanner.swift  (+2 more)
app/Sources/KritApp/: main.swift
app/Sources/KritCLI/: MCPServer.swift  main.swift
app/assets/sound_sources/: ocr.aif  pauseRecording.aif  startRecording.aif  stopRecording.aif
app/docs/: cleanshot-editor-reference.md  cleanshot-parity.md  decisoes.md  distribution.md  overlay-spec.md  runtime-bugs.md
apps/helper/: Package.swift
apps/helper/scripts/: make-app.sh
apps/shell/: README.md  index.html  package.json
apps/shell/src/: App.tsx  main.tsx
apps/shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/shell/src-tauri/capabilities/: default.json
apps/shell/src-tauri/icons/: icon.icns
apps/shell/src-tauri/src/: lib.rs  main.rs
assets/sounds/: capture.caf  copy.caf  pin.caf  preview.html  record-start.caf  record-stop.caf  save.caf  toggle.caf
docs/: architecture.md  onboarding-prototype.html
scripts/: macos-release.sh
scripts/release/: release.sh  test-update-local.sh  update-appcast.sh
(+92 files in other folders)
